# elicitation

./: .env  .env.example  .gitignore  .markdownlint-cli2.jsonc  ANODIZED_SPEC_EXPLORER_PLAN.md  ARCHIVE_PARITY_PLAN.md  BOTTICELLI_INTEGRATION.md  BOTTICELLI_INTEGRATION_OLD.md  BUG_EMPTY_PROOF_UNIT_VARIANT_ENUM.md  CHANGELOG.md  CHUNKED_PROOFS_USAGE.md  CLAUDE.md  COMPOSITIONAL_VERIFICATION_PLAN.md  CONTEXTUAL_FACTORY_PROPOSAL.md  CONTRACTS_IMPLEMENTATION_PLAN.md  CONTRACT_PARAMS_PLAN.md  CRATE_RESEARCH_UI_CONSTRAINTS.md  CREUSOT_FOR_VSMS.md  CREUSOT_GUIDE.md  CREUSOT_MIGRATION_09.md  CREUSOT_TRACKING.md  Cargo.toml  DATETIME_IMPLEMENTATION_PLAN.md  ELICITATION_CORE_REFACTOR_PLAN.md  ELICITATION_FIELD_VARIANTS_PLAN.md  ELICITATION_GENERATE_PLAN.md  ELICITATION_MACROS.md  ELICITATION_STYLE_SYSTEM_PLAN.md  ELICITATION_WORKFLOW_ARCHITECTURE.md  ELICIT_ACCESSKIT_PLAN.md  ELICIT_AXUM_PLAN.md  ELICIT_BEVY_PLAN.md  ELICIT_DB_PLAN.md  ELICIT_DOC_PLAN.md  ELICIT_EGUI_PLAN.md  ELICIT_GEOJSON_PLAN.md  ELICIT_GEORASTER_PLAN.md  ELICIT_GEO_PLAN.md  ELICIT_GEO_TYPES_PLAN.md  ELICIT_LEPTOS_PLAN.md  (+140 more)
crates/elicit_accesskit/: Cargo.toml  README.md
crates/elicit_accesskit/src/: enums.rs  geometry.rs  lib.rs  node.rs  node_id.rs  sql.rs  status_bar.rs  structs.rs  tree_update.rs
crates/elicit_accesskit/tests/: accesskit_test.rs
crates/elicit_axum/: Cargo.toml  README.md
crates/elicit_axum/src/: handler.rs  lib.rs  response.rs  router.rs  serve.rs
crates/elicit_axum/tests/: axum_router_test.rs
crates/elicit_axum_core/: Cargo.toml
crates/elicit_axum_core/src/: lib.rs
crates/elicit_axum_fragments/: Cargo.toml
crates/elicit_axum_fragments/src/: lib.rs
crates/elicit_bevy/: Cargo.toml  README.md
crates/elicit_bevy/src/: animation.rs  anti_alias.rs  app.rs  app_plugin.rs  asset.rs  audio.rs  camera.rs  color.rs  derive_plugin.rs  ecs_plugin.rs  gizmos.rs  image.rs  input.rs  input_focus.rs  lib.rs  light.rs  mesh.rs  pbr.rs  picking.rs  post_process.rs  query_plugin.rs  render.rs  render_atmosphere_workflow_plugin.rs  render_mesh_workflow_plugin.rs  render_plugin.rs  render_workflow_plugin.rs  scene.rs  scene_plugin.rs  sprite.rs  state.rs  text.rs  time.rs  trait_factories.rs  transform.rs  ui.rs  ui_plugin.rs  window.rs
crates/elicit_bevy/tests/: app_plugin_test.rs  derive_plugin_test.rs  ecs_plugin_test.rs  query_plugin_test.rs  render_atmosphere_workflow_plugin_test.rs  render_mesh_workflow_plugin_test.rs  render_plugin_test.rs  render_workflow_plugin_test.rs  scene_plugin_test.rs  ui_plugin_test.rs
crates/elicit_clap/: Cargo.toml  README.md
crates/elicit_clap/src/: arg.rs  arg_action.rs  arg_group.rs  color_choice.rs  command.rs  error_kind.rs  id.rs  lib.rs  possible_value.rs  trait_factories.rs  value_hint.rs  value_range.rs  value_source.rs
crates/elicit_clap/tests/: proof_coverage_test.rs  trait_factories_test.rs
crates/elicit_csv/: Cargo.toml  README.md
crates/elicit_csv/src/: factory.rs  lib.rs  plugin.rs  reader_builder_tools.rs  reader_tools.rs  record_tools.rs  utility_tools.rs  writer_builder_tools.rs  writer_tools.rs
crates/elicit_csv/tests/: workflow_test.rs
crates/elicit_db/: Cargo.toml  README.md
crates/elicit_db/src/: error.rs  kv_types.rs  lib.rs  types.rs  typestate.rs
crates/elicit_db/tests/: contracts_test.rs  geo_spatial_value_test.rs  geojson_db_value_test.rs  traits_test.rs  typestate_test.rs
crates/elicit_egui/: Cargo.toml  README.md
crates/elicit_egui/src/: accesskit_bridge.rs  container_tools.rs  egui_accesskit_convert.rs  fragment_tools.rs  input_tools.rs  layout_tools.rs  lib.rs  menu_tools.rs  render_context.rs  response_tools.rs  runtime.rs  serde_types.rs  style_tools.rs  widget_tools.rs  winit_plugin.rs
crates/elicit_egui/tests/: egui_accesskit_convert_test.rs  egui_renderer_test.rs
crates/elicit_geo/: Cargo.toml  README.md
crates/elicit_geo/src/: lib.rs
crates/elicit_geo/tests/: geo_test.rs
crates/elicit_geo_types/: Cargo.toml  README.md
crates/elicit_geo_types/src/: collections.rs  geometry.rs  lib.rs  primitives.rs  shapes.rs
crates/elicit_geo_types/tests/: geo_types_test.rs
crates/elicit_geojson/: Cargo.toml  README.md
crates/elicit_geojson/src/: error.rs  feature.rs  feature_collection.rs  geojson.rs  geometry.rs  geometry_value.rs  helpers.rs  id.rs  lib.rs
crates/elicit_geojson/tests/: smoke_test.rs  workflow_test.rs
crates/elicit_georaster/: Cargo.toml  README.md
crates/elicit_georaster/src/: color_type.rs  coordinate.rs  image_info.rs  lib.rs  photometric_interpretation.rs  pixels.rs  planar_configuration.rs  raster_value.rs  reader.rs
crates/elicit_georaster/tests/: smoke_test.rs  workflow_test.rs
crates/elicit_gis/: Cargo.toml  README.md
crates/elicit_gis/src/: error.rs  lib.rs
crates/elicit_jiff/: Cargo.toml  README.md
crates/elicit_jiff/src/: lib.rs  timestamp.rs  workflow.rs  zoned.rs
crates/elicit_jiff/tests/: jiff_test.rs  proof_coverage_test.rs  workflow_verified_test.rs
crates/elicit_leptos/: Cargo.toml  README.md
crates/elicit_leptos/src/: axum_ssr.rs  bridge.rs  code.rs  error.rs  leptos_accesskit_convert.rs  lib.rs  reactive.rs  render_context.rs  renderer.rs
crates/elicit_leptos/tests/: axum_ssr_test.rs  bridge_test.rs  code_test.rs  leptos_bridge_test.rs  reactive_test.rs
crates/elicit_polars/: Cargo.toml  README.md
crates/elicit_polars/src/: backend.rs  dataframe.rs  expr.rs  lib.rs  pipeline.rs  sql.rs
crates/elicit_polars/tests/: backend_test.rs  polars_test.rs
crates/elicit_proj/: Cargo.toml  README.md
crates/elicit_proofs/: Cargo.toml  README.md  build.rs
crates/elicit_ratatui/: Cargo.toml  README.md
crates/elicit_redb/: Cargo.toml  README.md
crates/elicit_regex/: Cargo.toml  README.md
crates/elicit_reqwest/: COVERAGE_GAP_ASSESSMENT.md  Cargo.toml  README.md
crates/elicit_rstar/: Cargo.toml  README.md
crates/elicit_serde/: Cargo.toml  README.md
crates/elicit_serde_json/: Cargo.toml  README.md
crates/elicit_server/: ARCHIVE.md  Cargo.toml  README.md
crates/elicit_sqlx/: Cargo.toml  README.md
crates/elicit_std/: Cargo.toml  README.md
(+2843 files in other folders)
