[workspace]
members = [
  "crates/elicitation",
  "crates/elicitation_derive",
  "crates/elicitation_macros",
  "crates/elicitation_creusot_proofs",
]
resolver = "2"

[workspace.package]
version = "0.6.8"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crumplecup/elicitation"
authors = ["crumplecup"]
homepage = "https://github.com/crumplecup/elicitation"
documentation = "https://docs.rs/elicitation"
readme = "README.md"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("verify-kani", "verify-creusot", "verify-prusti", "verify-verus", "verify-all"))',
] }

[workspace.dependencies]
elicitation = { path = "crates/elicitation", version = "0.6.8" }
elicitation_derive = { path = "crates/elicitation_derive", version = "0.6.8" }
elicitation_macros = { path = "crates/elicitation_macros", version = "0.6.8" }


# MCP client
rmcp = { version = "0.14", features = [
  "client",
  "transport-io",
  "schemars",
  "elicitation",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation for MCP
schemars = { version = "1", features = ["derive"] }

# Error handling
derive_more = { version = "2", features = ["display", "error", "from"] }
derive-getters = "0.5"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Utility
paste = "1.0"
async-trait = "0.1"
inventory = "0.3"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
csv = "1.3"

# DateTime libraries
chrono = "0.4"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
jiff = "0.2"

# UUID library
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL library
url = "2.5"

# Regex library
regex = "1.12"

# Verification libraries
creusot-std = { version = "0.9.0" }
prusti-contracts = { version = "0.2" }

# Dev dependencies
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
