[workspace]
members = [
  "crates/elicitation",
  "crates/elicitation_derive",
  "crates/elicitation_macros",
  "crates/elicitation_kani",
  "crates/elicitation_creusot",
  "crates/elicitation_rand",
  "crates/elicit_reqwest",
  "crates/elicit_serde",
  "crates/elicit_serde_json",
  "crates/elicit_server",
]
# Verus verification crate - verification only, not buildable with cargo
# Prusti crate lives on prusti-verification branch (frozen until tooling updates)
exclude = ["crates/elicitation_verus"]
resolver = "2"

[workspace.package]
version = "0.8.3"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crumplecup/elicitation"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
homepage = "https://github.com/crumplecup/elicitation"
documentation = "https://docs.rs/elicitation"
readme = "README.md"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("verify-kani", "verify-creusot", "verify-verus", "verify-all"))',
] }

[workspace.dependencies]
elicitation = { path = "crates/elicitation", version = "0.8.3" }
elicitation_derive = { path = "crates/elicitation_derive", version = "0.8.3" }
elicitation_macros = { path = "crates/elicitation_macros", version = "0.8.3" }
elicitation_rand = { path = "crates/elicitation_rand", version = "0.8.3" }
elicitation_kani = { path = "crates/elicitation_kani", version = "0.8.3" }


# MCP client
rmcp = { version = "0.17", features = [
  "client",
  "transport-io",
  "schemars",
  "elicitation",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"

# JSON Schema generation for MCP
schemars = { version = "1", features = ["derive"] }

# Error handling
derive_more = { version = "2", features = [
  "display",
  "error",
  "from",
  "deref",
  "deref_mut",
  "as_ref",
] }
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = "0.20"
derive-new = "0.7"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"

# Async utilities
futures = "0.3"

# Utility
paste = "1.0"
async-trait = "0.1"
inventory = "0.3"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
csv = "1.3"
shellexpand = "3.1"

# DateTime libraries
chrono = "0.4"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
jiff = "0.2"

# UUID library
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.10"
rand_chacha = "0.10"

# URL library
url = "2.5"

# HTTP library
http = "1.0"
bytes = "1.0"
reqwest = { version = "0.13", features = ["json", "cookies", "stream"] }

# Regex library
regex = "1.12"

# Verification libraries
creusot-std = { version = "0.10.0" }
kani-verifier = { version = "0.67" }
# prusti-contracts lives on prusti-verification branch

# Spec annotations (core, not optional — powers the agent prompt strategy)
# runtime-no-check: specs are purely documentation/static-analysis hooks.
# Runtime validation is already handled by Result-returning constructors.
anodized = { version = "0.3", features = ["runtime-no-check"] }

# Dev dependencies
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
