[workspace]
members = [
  # Core
  "crates/elicitation",
  "crates/elicitation_derive",
  # Verification
  "crates/elicitation_creusot",
  "crates/elicitation_kani",
  "crates/elicit_proofs",
  "crates/elicitation_rand",
  # Third-party integrations
  "crates/elicit_accesskit",
  "crates/elicit_chrono",
  "crates/elicit_clap",
  "crates/elicit_egui",
  "crates/elicit_jiff",
  "crates/elicit_ratatui",
  "crates/elicit_regex",
  "crates/elicit_reqwest",
  "crates/elicit_serde",
  "crates/elicit_serde_json",
  "crates/elicit_server",
  "crates/elicit_sqlx",
  "crates/elicit_std",
  "crates/elicit_time",
  "crates/elicit_tokio",
  "crates/elicit_tower",
  "crates/elicit_axum",
  "crates/elicit_ui",
  "crates/elicit_geo_types",
  "crates/elicit_geo",
  "crates/elicit_url",
  "crates/elicit_uuid",
  "crates/elicit_uom",
  "crates/elicit_leptos",
  "crates/elicit_db",
  "crates/elicit_wkt",
  "crates/elicit_wkb",
  "crates/elicit_geojson",
  "crates/elicit_georaster",
  "crates/elicit_rstar",
  "crates/elicit_proj",
  "crates/elicit_gis",
  "crates/elicit_winit",
  "crates/elicit_wgpu",
  "crates/elicit_bevy",
  "crates/elicit_redb",
  "crates/elicit_csv",
  "crates/elicit_toml",
]
# Verus verification crate - verification only, not buildable with cargo
# Prusti crate lives on prusti-verification branch (frozen until tooling updates)
exclude = [
  "crates/elicitation_verus",
  # polars-arrow pins chrono <=0.4.41 which conflicts with the workspace chrono 0.4.43.
  # elicit_polars can be checked independently: cargo check --manifest-path crates/elicit_polars/Cargo.toml
  "crates/elicit_polars",
  # surrealdb-types 3.x pins geo = "^0.32" which conflicts with the workspace geo 0.33.
  # elicit_surrealdb can be checked independently: cargo check --manifest-path crates/elicit_surrealdb/Cargo.toml
  "crates/elicit_surrealdb",
]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crumplecup/elicitation"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
homepage = "https://github.com/crumplecup/elicitation"
documentation = "https://docs.rs/elicitation"
readme = "README.md"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("verify-kani", "verify-creusot", "verify-verus", "verify-all"))',
  'cfg(kani)',
  'cfg(creusot)',
  'cfg(verus)',
  'cfg(prusti)',
  'cfg(anodized_panic)',
  'cfg(anodized_print)',
  'cfg(anodized_discard_specs)',
] }

[workspace.dependencies]
# ── Internal workspace crates ─────────────────────────────────────────────────
elicitation = { path = "crates/elicitation", version = "0.11.1" }
elicitation_derive = { path = "crates/elicitation_derive", version = "0.11.1" }
elicitation_kani = { path = "crates/elicitation_kani", version = "0.11.1" }
elicit_proofs = { path = "crates/elicit_proofs", version = "0.11.1" }
elicitation_rand = { path = "crates/elicitation_rand", version = "0.11.1" }
elicit_accesskit = { path = "crates/elicit_accesskit", version = "0.11.1" }
elicit_chrono = { path = "crates/elicit_chrono", version = "0.11.1" }
elicit_clap = { path = "crates/elicit_clap", version = "0.11.1" }
elicit_egui = { path = "crates/elicit_egui", version = "0.11.1" }
elicit_jiff = { path = "crates/elicit_jiff", version = "0.11.1" }
elicit_ratatui = { path = "crates/elicit_ratatui", version = "0.11.1" }
elicit_regex = { path = "crates/elicit_regex", version = "0.11.1" }
elicit_reqwest = { path = "crates/elicit_reqwest", version = "0.11.1" }
elicit_serde = { path = "crates/elicit_serde", version = "0.11.1" }
elicit_serde_json = { path = "crates/elicit_serde_json", version = "0.11.1" }
elicit_sqlx = { path = "crates/elicit_sqlx", version = "0.11.1" }
elicit_std = { path = "crates/elicit_std", version = "0.11.1" }
elicit_time = { path = "crates/elicit_time", version = "0.11.1" }
elicit_tokio = { path = "crates/elicit_tokio", version = "0.11.1" }
elicit_tower = { path = "crates/elicit_tower", version = "0.11.1" }
elicit_axum = { path = "crates/elicit_axum", version = "0.11.1" }
elicit_ui = { path = "crates/elicit_ui", version = "0.11.1" }
elicit_geo_types = { path = "crates/elicit_geo_types", version = "0.11.1" }
elicit_geo = { path = "crates/elicit_geo", version = "0.11.1" }
elicit_url = { path = "crates/elicit_url", version = "0.11.1" }
elicit_uuid = { path = "crates/elicit_uuid", version = "0.11.1" }
elicit_uom = { path = "crates/elicit_uom", version = "0.11.1" }
elicit_leptos = { path = "crates/elicit_leptos", version = "0.11.1" }
elicit_db = { path = "crates/elicit_db", version = "0.11.1" }
elicit_wkt = { path = "crates/elicit_wkt", version = "0.11.1" }
elicit_wkb = { path = "crates/elicit_wkb", version = "0.11.1" }
elicit_geojson = { path = "crates/elicit_geojson", version = "0.11.1" }
elicit_georaster = { path = "crates/elicit_georaster", version = "0.11.1" }
elicit_rstar = { path = "crates/elicit_rstar", version = "0.11.1" }
elicit_proj = { path = "crates/elicit_proj", version = "0.11.1" }
elicit_gis = { path = "crates/elicit_gis", version = "0.11.1" }
elicit_winit = { path = "crates/elicit_winit", version = "0.11.1" }
elicit_wgpu = { path = "crates/elicit_wgpu", version = "0.11.1" }
elicit_bevy = { path = "crates/elicit_bevy", version = "0.11.1" }
elicit_redb = { path = "crates/elicit_redb", version = "0.11.1" }
elicit_csv = { path = "crates/elicit_csv", version = "0.11.1" }
elicit_toml = { path = "crates/elicit_toml", version = "0.11.1" }
elicit_server = { path = "crates/elicit_server", version = "0.11.1" }

# ── MCP ───────────────────────────────────────────────────────────────────────
rmcp = { version = "1.7", features = [
  "client",
  "transport-io",
  "schemars",
  "elicitation",
] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"
schemars = { version = "1", features = ["derive"] }

# ── Error handling ────────────────────────────────────────────────────────────
derive_more = { version = "2", features = [
  "display",
  "error",
  "from",
  "deref",
  "deref_mut",
  "as_ref",
] }
anyhow = "1.0"
libc = "0.2"

# ── Derive utilities ──────────────────────────────────────────────────────────
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = "0.20"
derive-new = "0.7"

# ── Proc macros ───────────────────────────────────────────────────────────────
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
prettyplease = "0.2"
toml = "1"
toml_edit = { version = "0.25", features = ["default"] }
toml_datetime = { version = "1", features = ["serde"] }
walkdir = "2"

# ── Tracing ───────────────────────────────────────────────────────────────────
tracing = "0.1"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "io-util",
  "time",
  "sync",
  "rt",
  "fs",
  "net",
  "process",
  "signal",
] }
futures = "0.3"
async-trait = "0.1"

# ── UI ────────────────────────────────────────────────────────────────────────
accesskit = { version = "0.24", features = ["serde", "schemars"] }
# Linebender IR stack — core elicit_ui deps (not optional)
peniko = { version = "0.6", features = ["serde"] }
parley = { version = "0.9", default-features = false, features = ["std"] }
egui = { version = "0.34", features = ["serde"] }
egui-winit = { version = "0.34" }
egui-wgpu = { version = "0.34", features = ["winit"] }
ratatui = { version = "0.30", default-features = false, features = ["serde"] }
crossterm = { version = "0.29", default-features = false, features = [
  "event-stream",
] }
eframe = { version = "0.34", default-features = false, features = [
  "default_fonts",
  "glow",
] }

# ── Database ──────────────────────────────────────────────────────────────────
redb = "4"
surrealdb-types = "3.1.2"
surrealdb = { version = "3.1.2", features = [
  "protocol-ws",
  "protocol-http",
  "rustls",
  "kv-mem",
  "kv-rocksdb",
  "kv-surrealkv",
  "jwks",
  "http",
  "scripting",
] }
rust_decimal = "1"
sqlx-core = "0.8"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "any",
  "postgres",
  "sqlite",
  "mysql",
  "macros",
  "uuid",
  "chrono",
] }
dotenvy = "0.15"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "string"] }
csv = "1.4"
shellexpand = "3"
indicatif = "0.18"

# ── DateTime ──────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = [
  "parsing",
  "formatting",
  "macros",
  "serde",
  "serde-human-readable",
  "serde-well-known",
] }
jiff = { version = "0.2", features = ["serde"] }

# ── UUID / Encoding ───────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

# ── Random ────────────────────────────────────────────────────────────────────
rand = "0.10"
rand_chacha = "0.10"

# ── Network / HTTP ────────────────────────────────────────────────────────────
url = { version = "2.5", features = ["serde"] }
http = "1"
http-body = "1"
axum = { version = "0.8", features = ["macros", "ws", "multipart", "form"] }
axum-core = "0.5"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
bytes = "1"
reqwest = { version = "0.13", features = ["json", "cookies", "stream"] }
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# ── Regex ─────────────────────────────────────────────────────────────────────
regex = "1.12"

# ── Spatial ───────────────────────────────────────────────────────────────────
geo = "0.33"
geo-types = "0.7"
rstar = { version = "0.13", features = ["serde"] }
georaster = { version = "0.2", default-features = false }
proj = "0.31"
geojson = { version = "1", features = ["geo-types"] }
winit = { version = "0.30", features = ["serde"] }
wgpu = { version = "29", default-features = false, features = [
  "wgsl",
  "serde",
] }
bevy = { version = "0.18", default-features = false }
tiff = "0.9.1"

# ── Well-Known Text ───────────────────────────────────────────────────────────
wkt = { version = "0.14", features = ["geo-types", "serde"] }
wkb = "0.9"

# ── CSS / Color / Layout ──────────────────────────────────────────────────────
cssparser = "0.37"
palette = "0.7"
taffy = "0.10"

# ── Verification ──────────────────────────────────────────────────────────────
creusot-std = { version = "0.11", features = ["nightly"] }
kani-verifier = { version = "0.67" }
# prusti-contracts lives on prusti-verification branch

# ── Utility ───────────────────────────────────────────────────────────────────
paste = "1"
strum = { version = "0.28", features = ["derive"] }
inventory = "0.3"
dirs = "6"
# Spec annotations (runtime-no-check: specs are purely documentation/static-analysis hooks;
# runtime validation is handled by Result-returning constructors)
anodized = { version = "0.5" }

# ── Dev dependencies ──────────────────────────────────────────────────────────
tempfile = "3"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
