[package]
name = "elicit_accesskit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled accesskit type wrappers — newtypes with JsonSchema and MCP reflect methods"
keywords = ["mcp", "accesskit", "accessibility", "elicitation", "jsonschema"]
categories = ["accessibility", "development-tools"]

[dependencies]
elicitation = { workspace = true, features = ["accesskit"] }
elicitation_derive.workspace = true
elicitation_macros.workspace = true
accesskit = { workspace = true }
inventory.workspace = true
rmcp.workspace = true
derive_more.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tracing.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)'] }
