[package]
name = "elicit_axum_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled axum-core trait factory MCP tools — FromRequest, IntoResponse, FromRef"
keywords = ["mcp", "axum", "http", "traits", "elicitation"]
categories = ["web-programming", "network-programming", "development-tools"]

[dependencies]
elicitation = { workspace = true }
axum-core = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = []
emit = ["elicitation/emit"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)'] }
