[package]
name = "elicit_axum_fragments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled axum code generation MCP tools — emit complete Rust service fragments"
keywords = ["mcp", "axum", "codegen", "fragments", "elicitation"]
categories = ["web-programming", "development-tools", "template-engine"]

[dependencies]
elicitation = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = []
emit = ["elicitation/emit"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)'] }
