[package]
name = "elicit_csv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation shadow crate for the csv reader/writer library — MCP tools for CSV parsing and writing"
keywords = ["mcp", "csv", "parsing", "elicitation"]
categories = ["parser-implementations", "development-tools"]

[features]
api = []

[dependencies]
elicitation = { workspace = true, features = ["csv-types", "emit"] }
elicitation_derive.workspace = true
inventory.workspace = true
csv.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
derive_more = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)', 'cfg(feature, values("emit"))'] }
