[package]
name = "elicit_geo_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled geo-types shadow crate — MCP tools for geometric primitives"
keywords = ["mcp", "geo-types", "geospatial", "elicitation", "agent"]
categories = ["science::geo", "mathematics", "development-tools"]

[dependencies]
elicitation = { workspace = true, features = ["geo-types"] }
elicitation_derive.workspace = true
geo-types = { workspace = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
tracing.workspace = true
futures.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
emit = ["elicitation/emit"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)'] }
