[package]
name = "elicit_georaster"
version.workspace = true
edition.workspace = true
description = "Elicitation shadow crate for georaster GeoTIFF reader types"
keywords = ["mcp", "georaster", "geotiff", "raster", "elicitation"]
categories = ["science::geo", "development-tools"]
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
elicitation = { workspace = true, features = ["georaster-types", "emit"] }
elicitation_derive.workspace = true
georaster.workspace = true
tiff.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
tracing.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[features]
default = []
emit = ["elicitation/emit"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
